--- a/MEANGAME-FrontEnd/public/app/src/app/nav/nav.component.html
+++ b/MEANGAME-FrontEnd/public/app/src/app/nav/nav.component.html
@@ -1,3 +1,5 @@
 <button routerLink="">Home</button>
 <button routerLink="games">Games</button>
 <button routerLink="register">Register</button>
+<app-login></app-login>
+<hr>
