--- a/MEANGAME-FrontEnd/public/app/src/app/games/games.component.html
+++ b/MEANGAME-FrontEnd/public/app/src/app/games/games.component.html
@@ -1,3 +1,4 @@
+<app-search-game></app-search-game>
 <ul>
     <li *ngFor="let item of list">
         <a [routerLink]="item._id">{{item.title}}</a><span (click)="onDelete(item._id)">❌</span>
